# GarminTracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  ROADMAP.md  app.py  database.py  docker-compose.yml  garmin_sync.py  llm_analyzer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  billing.py  doctor.py  health.py  sharing.py  voice.py  workout.py
backend/app/core/: config.py  database.py  middleware.py  security.py
backend/app/models/: __init__.py  base.py  billing.py  chat.py  garmin_extended.py  health.py  meal.py  sharing.py  user.py  workout.py
backend/app/services/: billing.py  coaches.py  garmin_sync.py  knowledge.py  llm_analyzer.py  sharing.py  storage.py  usage.py  workout.py
backend/knowledge/: body-composition.md  garmin-api-data.md  general-health-advisory.md  heart-rate-training.md  hypertrophy-science.md  injury-prevention.md  meal-photo-analysis.md  meditation-mindfulness.md  mental-resilience-motivation.md  nutrition-fundamentals.md  recovery-readiness.md  running-programming.md  sauna-heat-therapy.md  sleep-recovery.md  strength-programming.md  stress-wellbeing.md  wearable-data-interpretation.md  weight-loss.md
backend/migrations/: env.py
backend/tests/: conftest.py  test_health_api.py  test_meal.py  test_models.py  test_sharing.py  test_usage.py  test_workout_api.py
docs/superpowers/plans/: 2026-03-25-full-platform-build.md  2026-04-07-training-program-tracker.md  2026-04-08-meal-photo-analysis.md
docs/superpowers/specs/: 2026-03-25-full-platform-build-design.md  2026-04-07-training-program-tracker-design.md  2026-04-08-meal-photo-analysis-design.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/callback/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/doctor/: layout.tsx  page.tsx
frontend/lib/: api.ts  auth.tsx  types.ts  workout-api.ts
garmin_tracker/: __init__.py  app.py  database.py  garmin_sync.py  llm_analyzer.py
mobile/: app.json  package.json
mobile/app/: _layout.tsx  ask.tsx  index.tsx  settings.tsx
mobile/lib/: api.ts  auth.ts  types.ts
templates/: index.html  setup.html
tests/: conftest.py  test_api.py  test_database.py  test_garmin_sync.py  test_llm_analyzer.py
(+15 files in other folders)
